idblu_tts_wrapper/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idblu-tts
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: idblu-tts
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
